history page updated

--- a/templates/home.html
+++ b/templates/home.html
@@ -173,7 +173,7 @@
     <h3 class="m-0">NeatNest</h3>
     <div>
       
-      <a href="{{ url_for('history') }}" class="btn btn-black me-2">History</a>
+      <a href="{{ url_for('history') }}" class="btn btn-black me-2">Your Bookings</a>
 
       {% if current_user.is_authenticated %}
         <span class="text-warning fw-semibold me-3">Hi, {{ current_user.username }}!</span>
